...
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/Operation_LL"
            tools:ignore="MissingConstraints,NotSibling"
            android:orientation="vertical">

            <com.example.lize_app.utils.MyLineChart
                android:id="@+id/LineChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="MissingConstraints" />

            <EditText
...
