...
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/Central_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Central"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/Peripheral_Button"
                app:layout_constraintEnd_toEndOf="parent"
...
